SAK-51994 Scorm code improvements (#14110)